--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,7 @@
 	      <div class="markdown">
 					<pre><code class="language-go hljs"><span class="hljs-keyword">package</span> main
 
-<span class="hljs-keyword">import</span> <span class="hljs-string">"github.com/Unknwon/macaron"</span>
+<span class="hljs-keyword">import</span> <span class="hljs-string">"gopkg.in/macaron.v1"</span>
 
 <span class="hljs-keyword">func</span> main() {
     m := macaron.Classic()
@@ -62,7 +62,7 @@
 	      <div class="markdown">
 					<pre><code class="language-go hljs"><span class="hljs-keyword">package</span> main
 
-<span class="hljs-keyword">import</span> <span class="hljs-string">"github.com/Unknwon/macaron"</span>
+<span class="hljs-keyword">import</span> <span class="hljs-string">"gopkg.in/macaron.v1"</span>
 
 <span class="hljs-keyword">func</span> main() {
     m := macaron.Classic()
@@ -83,8 +83,8 @@
 	      </h3>
 	      <div class="markdown">
 					<pre><code class="language-go hljs"><span class="hljs-keyword">import</span> (
-    <span class="hljs-string">"github.com/Unknwon/macaron"</span>
-    <span class="hljs-string">"github.com/macaron-contrib/i18n"</span>
+    <span class="hljs-string">"gopkg.in/macaron.v1"</span>
+    <span class="hljs-string">"github.com/go-macaron/i18n"</span>
 )
 
 <span class="hljs-keyword">func</span> main() {
